[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toq"
version = "0.1.0a1"
description = "Python SDK for toq protocol"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[project.urls]
Repository = "https://github.com/toqprotocol/toq-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/toq"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
]
